scenario-the-mirror/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyber-riposte
  labels:
    name: cyber-riposte
    app: mirror-agent
