scenario-the-mirror/k8s/dossier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dossier-web
  namespace: cyber-riposte
  labels:
    app: mirror-agent
    component: dossier-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: mirror-agent
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dossier-web
  namespace: cyber-riposte
  labels:
    app: mirror-agent
    component: dossier-web
spec:
  host: dossiers-cyber-riposte.apps.uu7a1hfd.eastus.aroapp.io
  to:
    kind: Service
    name: dossier-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
